# FastAPIChat

./: Dockerfile  Makefile  nginx.conf  pyproject.toml
app/application/api/: main.py  schemas.py
app/application/api/dependencies/: containers.py
app/application/api/messages/: filters.py  handlers.py  schemas.py
app/application/api/websockets/: messages.py
app/domain/entities/: base.py  messages.py
app/domain/events/: base.py  messages.py
app/domain/exceptions/: base.py  message.py  messages.py
app/domain/values/: base.py  messages.py
app/infra/message_brokers/: base.py  converters.py  kafka.py
app/infra/repositories/: messages.py
app/infra/repositories/filters/: messages.py
app/infra/repositories/messages/: base.py  converters.py  memory.py  mongo.py
app/logic/: init.py  mediator.py
app/logic/commands/: base.py  messages.py
app/logic/events/: base.py
app/logic/exceptions/: base.py  mediator.py  messages.py
app/logic/mediator/: base.py  command.py  event.py  query.py
app/logic/queries/: base.py  messages.py
app/settings/: config.py
app/tests/: conftest.py  fixtures.py
app/tests/api/: conftest.py  test_messages.py
app/tests/domain/values/: test_messages.py
docker_compose/: app.yaml  messaging.yaml
