[tool.poetry]
name = "fastapichat"
version = "0.1.0"
description = "fastapi chat with ddd architecture"
authors = ["Yauheni Mukhin <evgen3email@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.115.3"}
uvicorn = {extras = ["all"], version = "^0.32.0"}
pytest = "^8.3.3"
faker = "^30.8.1"
pytest-asyncio = "^0.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
